@@ -7,6 +7,9 @@ debhelper (10.7) UNRELEASED; urgency=medium
   * dh_installmodules: Ensure maintscripts are reproducible even with
     multiple kernel versions detected.
   * Apply patches from gregor herrmann to improve autopkgtests.
+  * Dh_Lib: Introduce a print_and_complex_doit.
+  * Buildsystem: Introduce a complex_doit_in_builddir, which is needed
+    by gradle-debian-helper.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
